# openline-receipt-gate

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.json  README.md  RUN_REPORT.json  pyproject.toml  requirements-model-swap.txt  requirements-pipelock.txt  verify-decision-node.mjs
.github/workflows/: release-check.yml
benchmarks/: __init__.py
benchmarks/assay/: AMENDMENT-001.json  AMENDMENT-002.json  CASES.json  FIXTURE_MANIFEST.json  FREEZE.json  PROTOCOL.md  PROTOCOL.sha256  RUN_REPORT.json  THIRD_PARTY_NOTICE.md  __init__.py  run_head_to_head.py
benchmarks/pipelock/: AMENDMENT-001.json  AMENDMENT-002.json  CASES.json  FIXTURE_MANIFEST.json  FREEZE.json  PROTOCOL-FROZEN-v0.3.0.md  PROTOCOL.md  PROTOCOL.sha256  REPORT.md  RUN_REPORT.json  THIRD_PARTY_NOTICE.md  __init__.py  prepare_fixtures.py  run_head_to_head.py
docs/: ARCHITECTURE.md  CLAIM_BOUNDARY.md  COMPATIBILITY.md  RECEIPT_SCHEMA.md  THREAT_MODEL.md  VERIFIED_COMMIT.md
examples/: demo_all.py  proof_to_policy_demo.py  wrap_eval_score.py  wrap_memory_write.py  wrap_tool_call.py
launch/: thread_copy.md
olp_gate/: __init__.py  adapters.py  adapters_assay.py  adapters_pipelock.py  cli.py  crypto.py  demo.py  evidence.py  gate.py  gateway.py  model_swap.py  policy.py  receipts.py  session.py  verified_commit.py
results/proof_to_policy_demo/: demo_summary.json
results/verified_commit_demo/: approved_action.json  decision_receipts.jsonl  gate_policy.json  (+8 more)
scripts/: release_check.py  verify_assay_benchmark.py  verify_manifest.py  verify_pipelock_benchmark.py
tests/: test_assay_adapter.py  test_model_swap.py  test_pipelock_adapter.py  test_pipelock_freeze.py  test_proof_to_policy.py  test_receipt_gate.py  test_verified_commit.py
(+54 files in other folders)
