[project]
name = "openline-receipt-gate"
version = "0.1.1"
description = "One-line receipt gate for risky agent actions."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Terrynce White"}]

[project.scripts]
olp-gate = "olp_gate.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
